<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ch.rasc</groupId>
  <artifactId>bsoncodec-test</artifactId>
  <version>1.0.7</version>

  <name>APT BSON Codec Generator Unit Tests</name>
  <description>Unit tests for the APT BSON Codec Generator</description>
  <url>https://github.com/ralscha/bsoncodec-apt</url>

  <inceptionYear>2015</inceptionYear>

  <licenses>
    <license>
      <name>Apache 2</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Ralph Schaer</name>
      <email>ralphschaer@gmail.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git@github.com:ralscha/bsoncodec-apt.git</connection>
    <developerConnection>scm:git:git@github.com:ralscha/bsoncodec-apt.git</developerConnection>
    <url>https://github.com/ralscha/bsoncodec-apt.git</url>
  </scm>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/ralscha/bsoncodec-apt/issues</url>
  </issueManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-sync</artifactId>
      <version>5.9.0</version>
    </dependency>

    <dependency>
      <groupId>ch.rasc</groupId>
      <artifactId>bsoncodec</artifactId>
      <version>1.0.1</version>
    </dependency>

    <dependency>
      <groupId>ch.rasc</groupId>
      <artifactId>bsoncodec-apt</artifactId>
      <version>1.0.7-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>de.flapdoodle.embed</groupId>
      <artifactId>de.flapdoodle.embed.mongo</artifactId>
      <version>4.24.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.27.7</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>6.1.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>sonatype</id>
      <name>sonatype</name>
      <url>https://oss.sonatype.org/content/groups/public</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <parameters>true</parameters>
          <compilerArgs>
            <arg>-proc:full</arg>
          </compilerArgs>
          <fork>true</fork>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.6</version>
      </plugin>

      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>4.6</version>
        <configuration>
          <header>${basedir}/src/main/config/header.txt</header>
          <properties>

            <year>${project.inceptionYear}</year>
            <currentYear>2018</currentYear>

          </properties>
          <excludes>
            <exclude>**/*.xml</exclude>
            <exclude>**/*.md</exclude>
            <exclude>**/*.py</exclude>
            <exclude>LICENSE</exclude>
            <exclude>.travis.yml</exclude>
            <exclude>**/.gitignore</exclude>
            <exclude>.factorypath</exclude>
            <exclude>mvnw</exclude>
            <exclude>.editorconfig</exclude>
          </excludes>
          <strictCheck>true</strictCheck>
        </configuration>
        <executions>
          <execution>
            <id>check-headers</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>4.0.0</version>
        <configuration>
          <createBackupFile>false</createBackupFile>
          <nrOfIndentSpace>2</nrOfIndentSpace>
          <sortProperties>false</sortProperties>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
